@@ -1,3 +1,8 @@
+2006-03-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/svg/svg-color.cpp (sp_svg_write_color): More readable colour
+	  names when possible: e.g. `red', `#cfc'.
+
 2006-03-10  Jon A. Cruz  <jon@joncruz.org>
 
 	* src/interface.cpp:
